opam-version: "2.0"
name: "jwt"
version: "0.1"
maintainer: "Danny Willems <contact@danny-willems.be>"
author: "Danny Willems <contact@danny-willems.be>"
build: [["make" "build"]]
install: [["make" "install"]]
remove: [["make" "remove"]]
depends: [
  "base64" {< "3.0.0"}
  "yojson" {>= "1.6.0"}
  "cryptokit"
  "nocrypto"
  "re"
]
