opam-version: "2.0"
name: "jwt"
version: "0.1"
maintainer: "Danny Willems <contact@danny-willems.be>"
author: "Danny Willems <contact@danny-willems.be>"
homepage: "https://github.com/besport/ocaml-jwt"
bug-reports: "https://github.com/besport/ocaml-jwt/issues"
build: [["dune" "build" "-p" name "-j" jobs]]
depends: [
  "base64" {>= "3.0.0"}
  "yojson" {>= "1.6.0"}
  "nocrypto"
  "re"
]
synopsis: "OCaml based jwt implementation"
description: "
JSON Web Token (JWT) is a compact claims representation format intended for space constrained environments such as HTTP Authorization headers and URI query parameters. JWTs encode claims to be transmitted as a JSON [RFC7159] object that is used as the payload of a JSON Web Signature (JWS) [JWS] structure or as the plaintext of a JSON Web Encryption (JWE) [JWE] structure, enabling the claims to be digitally signed or integrity protected with a Message Authentication Code (MAC) and/or encrypted. JWTs are always represented using the JWS Compact Serialization or the JWE Compact Serialization.
"
